--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.css
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.css
@@ -3,63 +3,111 @@
 * { box-sizing: border-box; }
 
 /* line 4, style.sass */
-.container { margin: 1em; }
+.container { margin: 0 1em; }
 
-/* line 41, _baseline-grid.sass */
-html { font-family: "Vollkorn", georgia, serif; font-size: 100%; line-height: 1.5em; font-weight: 100; background-image: linear-gradient(cyan 1px, transparent 1px); background-size: auto 1.5em; }
+/* line 7, style.sass */
+.clearfix:after { content: ""; display: table; clear: both; }
 
-/* line 51, _baseline-grid.sass */
-h1, h2, h3, h4, h5, h6 { font-family: arial, sans-serif; font-weight: 900; color: #333333; }
+/* line 42, _baseline-grid.sass */
+html { font-family: "Vollkorn", georgia, serif; font-size: 125%; line-height: 1.5em; font-weight: 100; background-image: linear-gradient(cyan 1px, transparent 1px); background-size: auto 1.5em; }
 
-/* line 57, _baseline-grid.sass */
-h1 { font-size: 2em; }
+/* line 52, _baseline-grid.sass */
+h1, h2, h3, h4, h5, h6 { margin: 0; font-family: arial, sans-serif; font-weight: 900; color: #333333; }
 
-/* line 61, _baseline-grid.sass */
+/* line 59, _baseline-grid.sass */
+h1 { font-size: 2em; line-height: 1.5em; margin-bottom: 0.75em; }
+
+/* line 65, _baseline-grid.sass */
 p { margin: 1.5rem 0; color: #444444; }
 
-/* line 66, _baseline-grid.sass */
+/* line 70, _baseline-grid.sass */
 .test span { font-weight: 700; }
 
-/* line 10, style.sass */
+/* line 74, _baseline-grid.sass */
+section.process h2 { margin-bottom: 1em; font-family: "Vollkorn", georgia, serif; font-weight: normal; }
+
+/* line 15, style.sass */
 .viewport-label { margin: 0; }
-/* line 13, style.sass */
-.viewport-label::before { position: absolute; bottom: 0; right: 0; padding: 0 5px; color: white; font-size: 0.75em; background: rgba(0, 0, 0, 0.5); }
+/* line 18, style.sass */
+.viewport-label::before { position: fixed; bottom: 0; right: 0; padding: 0 5px; color: white; font-size: 0.75em; background: rgba(0, 0, 0, 0.5); }
 
 /* TODO: remove this before launch */
 /* line 2, viewports/_alpha.sass */
 .viewport-label::before { content: "Alpha Viewport"; }
 
 /* line 5, viewports/_alpha.sass */
-.row { margin-top: 3em; margin-left: -1em; margin-right: -1em; }
+body > header { height: 15em; background: url("../images/ui/hipster-alley-sm.jpg") center center no-repeat; background-size: cover; box-shadow: inset 0px 10px 0px rgba(255, 255, 255, 0.5); }
 
-/* line 10, viewports/_alpha.sass */
-.column { clear: both; margin: 0; margin-bottom: 1.5em; padding: 1.5em 1em; background: rgba(0, 0, 0, 0.03); }
+/* line 11, viewports/_alpha.sass */
+body > nav { margin: 0 0 0.75em 0; text-align: center; background: white; }
+/* line 16, viewports/_alpha.sass */
+body > nav ul { margin: 0; padding: 0; }
+/* line 20, viewports/_alpha.sass */
+body > nav li { display: inline; }
+/* line 23, viewports/_alpha.sass */
+body > nav a { display: inline-block; padding: 0em 0.5em; font-family: Arial, sans-serif; font-weight: bold; font-size: 0.75em; color: #333333; text-decoration: none; text-transform: uppercase; }
+/* line 33, viewports/_alpha.sass */
+body > nav .brand { width: 4em; line-height: 3em; font-family: "Vollkorn", georgia, serif; font-size: 1.25em; text-transform: none; text-indent: -9999px; background: url("../images/ui/sprites.png") left top; background-size: 60em; background-position: 0 0.75em; }
 
-/* line 17, viewports/_alpha.sass */
+/* line 44, viewports/_alpha.sass */
+section.process { text-align: center; background: #eeeeee; padding: 3em 0; }
+
+/* line 49, viewports/_alpha.sass */
+.process .icon { display: block; margin: 0 auto 1.5em auto; height: 3em; width: 4em; background-image: url("../images/ui/sprites.png"); background-size: 60em; background-position: 0.6em -5em; }
+
+/* line 58, viewports/_alpha.sass */
+.process-communication .icon { background-position: 0.6em -5em; }
+
+/* line 61, viewports/_alpha.sass */
+.process-organization .icon { background-position: -4.4em -5em; }
+
+/* line 64, viewports/_alpha.sass */
+.process-education .icon { background-position: -9.4em -5em; }
+
+/* line 67, viewports/_alpha.sass */
+.process-efficiency .icon { background-position: -14.4em -5em; }
+
+/* line 70, viewports/_alpha.sass */
+.process-creativity .icon { background-position: -19.4em -5em; }
+
+/* line 73, viewports/_alpha.sass */
+.process-accuracy .icon { background-position: -24.4em -5em; }
+
+/* line 78, viewports/_alpha.sass */
+.row { margin-left: -1em; margin-right: -1em; }
+
+/* line 82, viewports/_alpha.sass */
+.column { clear: both; margin: 0; margin-bottom: 3em; padding: 0 1em; }
+/* line 88, viewports/_alpha.sass */
+.column:last-child { margin-bottom: 0; }
+
+/* line 92, viewports/_alpha.sass */
 p { margin: 0; margin-bottom: 1em; }
-/* line 21, viewports/_alpha.sass */
+/* line 96, viewports/_alpha.sass */
 p:last-child { margin-bottom: 0; }
 
 @media (min-width: 30em) { /* line 1, viewports/_bravo.sass */
   .viewport-label::before { content: "Bravo Viewport"; }
-  /* line 4, viewports/_bravo.sass */
-  .column { clear: inherit; max-width: 50%; float: left; border-right: 1px solid rgba(0, 0, 0, 0.1); }
-  /* line 10, viewports/_bravo.sass */
-  .column:nth-child(2n+1) { clear: both; }
+  /* line 5, viewports/_bravo.sass */
+  body > header { background-image: url("../images/ui/hipster-alley-md.jpg"); }
+  /* line 8, viewports/_bravo.sass */
+  .column { clear: inherit; max-width: 50%; float: left; }
   /* line 13, viewports/_bravo.sass */
-  .column:nth-child(2n) { border-right: none; } }
+  .column:nth-child(2n+1) { clear: both; }
+  /* line 16, viewports/_bravo.sass */
+  .column:nth-last-child(2) { margin-bottom: 0; } }
 @media (min-width: 60em) { /* line 1, viewports/_charlie.sass */
   .viewport-label::before { content: "Charlie Viewport"; }
-  /* line 4, viewports/_charlie.sass */
-  .column { max-width: 33.33333%; float: left; }
+  /* line 5, viewports/_charlie.sass */
+  body > header { background-image: url("../images/ui/hipster-alley-lg.jpg"); }
   /* line 8, viewports/_charlie.sass */
+  .column { max-width: 33.33333%; float: left; }
+  /* line 12, viewports/_charlie.sass */
   .column:nth-child(2n+1) { clear: inherit; }
-  /* line 11, viewports/_charlie.sass */
-  .column:nth-child(3n+1) { clear: both; }
   /* line 15, viewports/_charlie.sass */
-  .column:nth-child(2n) { border-right: 1px solid rgba(0, 0, 0, 0.1); }
+  .column:nth-child(3n+1) { clear: both; }
   /* line 18, viewports/_charlie.sass */
-  .column:nth-child(3n) { border-right: none; } }
+  .column:nth-last-child(3) { margin-bottom: 0; } }
 @media (min-width: 72em) { /* line 1, /Users/christiannaths/Projects/NAIT/14013 DMIT2033 Web Design & Usability II/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_delta.sass */
   .viewport-label::before { content: "Delta Viewport"; }
   /* line 4, /Users/christiannaths/Projects/NAIT/14013 DMIT2033 Web Design & Usability II/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_delta.sass */
