--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.sass
@@ -2,7 +2,12 @@
   box-sizing: border-box
 
 .container
-  margin: 1em
+  margin: 0 1em
+
+.clearfix:after
+  content: ""
+  display: table
+  clear: both
 
 
 @import baseline-grid
@@ -11,7 +16,7 @@
   margin: 0
 
   &::before
-    position: absolute
+    position: fixed
     bottom: 0
     right: 0
     padding: 0 5px
