--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_charlie.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_charlie.sass
@@ -1,6 +1,10 @@
 .viewport-label::before
   content: "Charlie Viewport"
 
+
+body > header
+  background-image: url('../images/ui/hipster-alley-lg.jpg')
+
 .column
   max-width: 33.3333333%
   float: left
@@ -11,9 +15,5 @@
   &:nth-child(3n+1)
     clear: both
 
-
-  &:nth-child(2n)
-    border-right: 1px solid fade-out(#000, 0.9)
-
-  &:nth-child(3n)
-    border-right: none
+  &:nth-last-child(3)
+    margin-bottom: 0
