--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_delta.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_delta.sass
@@ -2,5 +2,9 @@
   content: "Delta Viewport"
 
 .container
-  max-width: 70em
+  width: 55.6em
   margin: 0 auto
+
+body > nav
+  a
+    margin-left: 1em
