--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.css
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.css
@@ -21,14 +21,11 @@ h1 { font-size: 2em; line-height: 1.5em; margin-bottom: 0.75em; }
 p { margin: 1.5rem 0; color: #444444; }
 
 /* line 70, _baseline-grid.sass */
-.test span { font-weight: 700; }
-
-/* line 74, _baseline-grid.sass */
 section.process h2 { margin-bottom: 1em; font-family: "Vollkorn", georgia, serif; font-weight: normal; }
 
-/* line 15, style.sass */
+/* line 17, style.sass */
 .viewport-label { margin: 0; }
-/* line 18, style.sass */
+/* line 20, style.sass */
 .viewport-label::before { position: fixed; bottom: 0; right: 0; padding: 0 5px; color: white; font-size: 0.75em; background: rgba(0, 0, 0, 0.5); }
 
 /* TODO: remove this before launch */
@@ -36,79 +33,102 @@ section.process h2 { margin-bottom: 1em; font-family: "Vollkorn", georgia, serif
 .viewport-label::before { content: "Alpha Viewport"; }
 
 /* line 5, viewports/_alpha.sass */
-body > header { height: 15em; background: url("../images/ui/hipster-alley-sm.jpg") center center no-repeat; background-size: cover; box-shadow: inset 0px 10px 0px rgba(255, 255, 255, 0.5); }
-
-/* line 11, viewports/_alpha.sass */
-body > nav { margin: 0 0 0.75em 0; text-align: center; background: white; }
-/* line 16, viewports/_alpha.sass */
-body > nav ul { margin: 0; padding: 0; }
-/* line 20, viewports/_alpha.sass */
-body > nav li { display: inline; }
-/* line 23, viewports/_alpha.sass */
-body > nav a { display: inline-block; padding: 0em 0.5em; font-family: Arial, sans-serif; font-weight: bold; font-size: 0.75em; color: #333333; text-decoration: none; text-transform: uppercase; }
-/* line 33, viewports/_alpha.sass */
-body > nav .brand { width: 4em; line-height: 3em; font-family: "Vollkorn", georgia, serif; font-size: 1.25em; text-transform: none; text-indent: -9999px; background: url("../images/ui/sprites.png") left top; background-size: 60em; background-position: 0 0.75em; }
-
-/* line 44, viewports/_alpha.sass */
-section.process { text-align: center; background: #eeeeee; padding: 3em 0; }
-
-/* line 49, viewports/_alpha.sass */
-.process .icon { display: block; margin: 0 auto 1.5em auto; height: 3em; width: 4em; background-image: url("../images/ui/sprites.png"); background-size: 60em; background-position: 0.6em -5em; }
-
-/* line 58, viewports/_alpha.sass */
-.process-communication .icon { background-position: 0.6em -5em; }
-
-/* line 61, viewports/_alpha.sass */
-.process-organization .icon { background-position: -4.4em -5em; }
-
-/* line 64, viewports/_alpha.sass */
-.process-education .icon { background-position: -9.4em -5em; }
-
-/* line 67, viewports/_alpha.sass */
-.process-efficiency .icon { background-position: -14.4em -5em; }
-
-/* line 70, viewports/_alpha.sass */
-.process-creativity .icon { background-position: -19.4em -5em; }
-
-/* line 73, viewports/_alpha.sass */
-.process-accuracy .icon { background-position: -24.4em -5em; }
-
-/* line 78, viewports/_alpha.sass */
 .row { margin-left: -1em; margin-right: -1em; }
 
-/* line 82, viewports/_alpha.sass */
+/* line 9, viewports/_alpha.sass */
 .column { clear: both; margin: 0; margin-bottom: 3em; padding: 0 1em; }
-/* line 88, viewports/_alpha.sass */
+/* line 15, viewports/_alpha.sass */
 .column:last-child { margin-bottom: 0; }
 
-/* line 92, viewports/_alpha.sass */
+/* line 19, viewports/_alpha.sass */
 p { margin: 0; margin-bottom: 1em; }
-/* line 96, viewports/_alpha.sass */
+/* line 23, viewports/_alpha.sass */
 p:last-child { margin-bottom: 0; }
+
+/* line 27, viewports/_alpha.sass */
+body > header { height: 15em; background: url("../images/ui/hipster-alley-sm.jpg") center center no-repeat; background-size: cover; box-shadow: inset 0px 10px 0px rgba(255, 255, 255, 0.5); }
+
+/* line 33, viewports/_alpha.sass */
+body > nav { padding: 0.75em 0; text-align: center; background: white; }
+/* line 38, viewports/_alpha.sass */
+body > nav ul { margin: 0; padding: 0; }
+/* line 42, viewports/_alpha.sass */
+body > nav li { display: inline; }
+/* line 45, viewports/_alpha.sass */
+body > nav a { display: inline-block; padding: 0em 0.5em; font-family: Arial, sans-serif; font-weight: bold; font-size: 0.75em; color: #333333; text-decoration: none; text-transform: uppercase; line-height: 2; }
+/* line 56, viewports/_alpha.sass */
+body > nav .brand { width: 4em; font-family: "Vollkorn", georgia, serif; font-size: 1em; line-height: 3em; text-transform: none; text-indent: -9999px; background: url("../images/ui/sprites.png") left top; background-size: 60em; background-position: 0 0.75em; }
+/* line 67, viewports/_alpha.sass */
+body > nav .column { margin-bottom: 0; }
+
+/* line 70, viewports/_alpha.sass */
+body.landing-page > nav li:first-child a { color: white; background: #ee5a47; border-radius: 3px; }
+
+/* line 76, viewports/_alpha.sass */
+section.process { text-align: center; background: #eeeeee; padding: 3em 0; }
+
+/* line 81, viewports/_alpha.sass */
+.process .icon { display: none; margin: 0 auto 1.5em auto; height: 3em; width: 4em; background-image: url("../images/ui/sprites.png"); background-size: 60em; background-position: 0.6em -5em; }
+
+/* line 90, viewports/_alpha.sass */
+.process-communication .icon { background-position: 0.6em -5em; }
+
+/* line 93, viewports/_alpha.sass */
+.process-organization .icon { background-position: -4.4em -5em; }
+
+/* line 96, viewports/_alpha.sass */
+.process-education .icon { background-position: -9.4em -5em; }
+
+/* line 99, viewports/_alpha.sass */
+.process-efficiency .icon { background-position: -14.4em -5em; }
+
+/* line 102, viewports/_alpha.sass */
+.process-creativity .icon { background-position: -19.4em -5em; }
+
+/* line 105, viewports/_alpha.sass */
+.process-accuracy .icon { background-position: -24.4em -5em; }
 
 @media (min-width: 30em) { /* line 1, viewports/_bravo.sass */
   .viewport-label::before { content: "Bravo Viewport"; }
-  /* line 5, viewports/_bravo.sass */
-  body > header { background-image: url("../images/ui/hipster-alley-md.jpg"); }
-  /* line 8, viewports/_bravo.sass */
-  .column { clear: inherit; max-width: 50%; float: left; }
-  /* line 13, viewports/_bravo.sass */
+  /* line 4, viewports/_bravo.sass */
+  .column { clear: inherit; width: 50%; float: left; }
+  /* line 9, viewports/_bravo.sass */
   .column:nth-child(2n+1) { clear: both; }
-  /* line 16, viewports/_bravo.sass */
-  .column:nth-last-child(2) { margin-bottom: 0; } }
+  /* line 12, viewports/_bravo.sass */
+  .column:nth-last-child(2) { margin-bottom: 0; }
+  /* line 17, viewports/_bravo.sass */
+  body > header { background-image: url("../images/ui/hipster-alley-md.jpg"); }
+  /* line 21, viewports/_bravo.sass */
+  body > nav a { margin-left: 0.25em; }
+  /* line 24, viewports/_bravo.sass */
+  body > nav .column { width: 100%; }
+  /* line 27, viewports/_bravo.sass */
+  .process .icon { display: block; } }
 @media (min-width: 60em) { /* line 1, viewports/_charlie.sass */
   .viewport-label::before { content: "Charlie Viewport"; }
   /* line 5, viewports/_charlie.sass */
-  body > header { background-image: url("../images/ui/hipster-alley-lg.jpg"); }
-  /* line 8, viewports/_charlie.sass */
-  .column { max-width: 33.33333%; float: left; }
-  /* line 12, viewports/_charlie.sass */
+  .column { width: 33.33333%; float: left; }
+  /* line 9, viewports/_charlie.sass */
   .column:nth-child(2n+1) { clear: inherit; }
-  /* line 15, viewports/_charlie.sass */
+  /* line 12, viewports/_charlie.sass */
   .column:nth-child(3n+1) { clear: both; }
-  /* line 18, viewports/_charlie.sass */
-  .column:nth-last-child(3) { margin-bottom: 0; } }
-@media (min-width: 72em) { /* line 1, /Users/christiannaths/Projects/NAIT/14013 DMIT2033 Web Design & Usability II/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_delta.sass */
+  /* line 15, viewports/_charlie.sass */
+  .column:nth-last-child(3) { margin-bottom: 0; }
+  /* line 19, viewports/_charlie.sass */
+  body > header { height: 18em; background-image: url("../images/ui/hipster-alley-lg.jpg"); }
+  /* line 23, viewports/_charlie.sass */
+  body > nav { text-align: left; }
+  /* line 26, viewports/_charlie.sass */
+  body > nav a { margin-left: 0.5em; }
+  /* line 29, viewports/_charlie.sass */
+  body > nav ul { float: right; line-height: 3em; }
+  /* line 33, viewports/_charlie.sass */
+  body > nav .column:first-child { width: 25%; }
+  /* line 36, viewports/_charlie.sass */
+  body > nav .column:last-child { width: 75%; } }
+@media (min-width: 72em) { /* line 1, viewports/_delta.sass */
   .viewport-label::before { content: "Delta Viewport"; }
-  /* line 4, /Users/christiannaths/Projects/NAIT/14013 DMIT2033 Web Design & Usability II/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/viewports/_delta.sass */
-  .container { max-width: 70em; margin: 0 auto; } }
+  /* line 4, viewports/_delta.sass */
+  .container { width: 55.6em; margin: 0 auto; }
+  /* line 9, viewports/_delta.sass */
+  body > nav a { margin-left: 1em; } }
