--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/_baseline-grid.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/_baseline-grid.sass
@@ -53,7 +53,6 @@ h1, h2, h3, h4, h5, h6
   margin: 0
   font-family: $sans-serif-family
   font-weight: 900
-  color: #333
 
 
 h1
@@ -63,8 +62,7 @@ h1
 
 
 p
-  margin: 1.5rem 0
-  color: #444
+  margin: 1.5em 0
 
 
 section.process h2
