start project -- reorganized contexts

--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.css
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.css
@@ -81,94 +81,94 @@ img { display: block; max-width: 100%; }
 /* line 174, elements/_all.sass */
 body > section { padding: 3em 0; }
 
-/* line 3, contexts/_all.sass */
+/* line 3, contexts/_site-nav.sass */
 body.landing-page .site-nav ul li:first-child a { color: white; background: #ee5a47; border-radius: 0.5em; }
 
-/* line 8, contexts/_all.sass */
+/* line 8, contexts/_site-nav.sass */
 .site-nav { text-align: center; }
-/* line 11, contexts/_all.sass */
+/* line 11, contexts/_site-nav.sass */
 .site-nav .grid-frame { margin-top: 1.5em; margin-bottom: 1.5em; }
-/* line 15, contexts/_all.sass */
+/* line 15, contexts/_site-nav.sass */
 .site-nav .grid-frame:first-child { margin-bottom: 0; }
-/* line 18, contexts/_all.sass */
+/* line 18, contexts/_site-nav.sass */
 .site-nav .grid-frame:last-child { margin-top: 0; }
-/* line 21, contexts/_all.sass */
+/* line 21, contexts/_site-nav.sass */
 .site-nav li { display: inline; }
-/* line 24, contexts/_all.sass */
+/* line 24, contexts/_site-nav.sass */
 .site-nav a { display: inline-block; padding: 0 0.25em; font-family: arial, sans-serif; font-weight: 900; }
-/* line 30, contexts/_all.sass */
+/* line 30, contexts/_site-nav.sass */
 .site-nav li a { font-size: 0.8em; line-height: 1.875; color: #443d43; }
-@media (min-width: 32em) { /* line 36, contexts/_all.sass */
+@media (min-width: 32em) { /* line 36, contexts/_site-nav.sass */
   .site-nav li a { padding: 0 0.5em; } }
-@media (min-width: 46em) { /* line 40, contexts/_all.sass */
+@media (min-width: 46em) { /* line 40, contexts/_site-nav.sass */
   .site-nav .grid-frame { clear: none; float: left; }
-  /* line 44, contexts/_all.sass */
+  /* line 44, contexts/_site-nav.sass */
   .site-nav .grid-frame:first-child { width: 25%; text-align: left; }
-  /* line 48, contexts/_all.sass */
+  /* line 48, contexts/_site-nav.sass */
   .site-nav .grid-frame:last-child { width: 75%; margin-top: 1.5em; margin-bottom: 0; text-align: right; }
-  /* line 54, contexts/_all.sass */
+  /* line 54, contexts/_site-nav.sass */
   .site-nav li a { line-height: 1.875; padding: 0 0.75em; margin-top: 0.9375em; margin-bottom: 0.9375em; }
-  /* line 60, contexts/_all.sass */
+  /* line 60, contexts/_site-nav.sass */
   .site-nav .branding-logo { background-position: 0 0.5em; } }
-@media (min-width: 70em) { /* line 64, contexts/_all.sass */
+@media (min-width: 70em) { /* line 64, contexts/_site-nav.sass */
   .site-nav li a { padding: 0 1em; } }
 
-/* line 70, contexts/_all.sass */
+/* line 3, contexts/_header-banner.sass */
 .branding-banner { height: 9em; background-image: url("../images/ui/tagline.png"), url("../images/ui/hipster-alley-md.jpg"); background-size: auto 75%, cover; background-repeat: no-repeat, no-repeat; background-position: center center, center center; box-shadow: inset 0px 10px 0px rgba(255, 255, 255, 0.5); }
-@media (min-width: 32em) { /* line 70, contexts/_all.sass */
+@media (min-width: 32em) { /* line 3, contexts/_header-banner.sass */
   .branding-banner { height: 12em; } }
-@media (min-width: 46em) { /* line 70, contexts/_all.sass */
+@media (min-width: 46em) { /* line 3, contexts/_header-banner.sass */
   .branding-banner { height: 15em; } }
-@media (min-width: 60em) { /* line 70, contexts/_all.sass */
+@media (min-width: 60em) { /* line 3, contexts/_header-banner.sass */
   .branding-banner { height: 24em; background-image: url("../images/ui/tagline.png"), url("../images/ui/hipster-alley-lg.jpg"); background-size: auto 50%, cover; } }
 
-/* line 91, contexts/_all.sass */
+/* line 3, contexts/_intro-section.sass */
 .intro { text-align: center; }
 
-/* line 96, contexts/_all.sass */
+/* line 3, contexts/_process-section.sass */
 .process { text-align: center; background: #eeeeee; }
-/* line 100, contexts/_all.sass */
+/* line 7, contexts/_process-section.sass */
 .process .process-icon { margin: 0 auto 1.5em auto; }
-@media (min-width: 32em) { /* line 105, contexts/_all.sass */
+@media (min-width: 32em) { /* line 11, contexts/_process-section.sass */
   .process .grid-frame { clear: none; width: 50%; float: left; }
-  /* line 110, contexts/_all.sass */
+  /* line 16, contexts/_process-section.sass */
   .process .grid-frame:nth-child(2n+1) { clear: both; }
-  /* line 113, contexts/_all.sass */
+  /* line 19, contexts/_process-section.sass */
   .process .grid-frame:nth-last-child(2) { margin-bottom: 0; } }
-@media (min-width: 60em) { /* line 117, contexts/_all.sass */
+@media (min-width: 60em) { /* line 23, contexts/_process-section.sass */
   .process .grid-frame { width: 33.33333%; float: left; }
-  /* line 121, contexts/_all.sass */
+  /* line 27, contexts/_process-section.sass */
   .process .grid-frame:nth-child(2n+1) { clear: none; }
-  /* line 124, contexts/_all.sass */
+  /* line 30, contexts/_process-section.sass */
   .process .grid-frame:nth-child(3n+1) { clear: both; }
-  /* line 127, contexts/_all.sass */
+  /* line 33, contexts/_process-section.sass */
   .process .grid-frame:nth-last-child(3) { margin-bottom: 0; } }
 
-/* line 133, contexts/_all.sass */
+/* line 3, contexts/_portfolio-section.sass */
 .portfolio { text-align: center; }
-/* line 136, contexts/_all.sass */
+/* line 6, contexts/_portfolio-section.sass */
 .portfolio h1 { margin-bottom: 0; }
-/* line 140, contexts/_all.sass */
+/* line 9, contexts/_portfolio-section.sass */
 .portfolio .grid-frame { margin-bottom: 1.5em; }
-@media (min-width: 24em) { /* line 144, contexts/_all.sass */
+@media (min-width: 24em) { /* line 13, contexts/_portfolio-section.sass */
   .portfolio .grid { margin: 0 auto; max-width: 24em; } }
-@media (min-width: 60em) { /* line 149, contexts/_all.sass */
+@media (min-width: 60em) { /* line 18, contexts/_portfolio-section.sass */
   .portfolio .grid { max-width: 46em; }
-  /* line 152, contexts/_all.sass */
+  /* line 21, contexts/_portfolio-section.sass */
   .portfolio .grid-frame { clear: none; width: 50%; float: left; }
-  /* line 157, contexts/_all.sass */
+  /* line 26, contexts/_portfolio-section.sass */
   .portfolio .grid-frame:nth-child(2n+1) { clear: both; }
-  /* line 160, contexts/_all.sass */
+  /* line 29, contexts/_portfolio-section.sass */
   .portfolio .grid-frame:nth-last-child(2) { margin-bottom: 0; } }
-/* line 163, contexts/_all.sass */
+/* line 32, contexts/_portfolio-section.sass */
 .portfolio nav { font-style: italic; color: #939393; margin-bottom: 1.5em; }
-/* line 168, contexts/_all.sass */
+/* line 37, contexts/_portfolio-section.sass */
 .portfolio nav li { display: inline; }
-/* line 171, contexts/_all.sass */
+/* line 40, contexts/_portfolio-section.sass */
 .portfolio nav li:after { content: " / "; }
-/* line 174, contexts/_all.sass */
+/* line 43, contexts/_portfolio-section.sass */
 .portfolio nav li:last-child:after { content: ""; }
-/* line 177, contexts/_all.sass */
+/* line 46, contexts/_portfolio-section.sass */
 .portfolio nav a { color: #939393; padding: 0 0.25em; }
-/* line 181, contexts/_all.sass */
+/* line 50, contexts/_portfolio-section.sass */
 .portfolio nav a.active { color: #ee5a47; }
