--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/style.sass
@@ -33,4 +33,8 @@ $breakpoint-3: 80em
 @import elements/all
 
 // ----------------------------------------------Contexts
-@import contexts/all
+@import contexts/site-nav
+@import contexts/header-banner
+@import contexts/intro-section
+@import contexts/process-section
+@import contexts/portfolio-section
