--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/contexts/_process-section.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/contexts/_process-section.sass
@@ -32,3 +32,18 @@
 
     .grid-frame:nth-last-child(3)
       margin-bottom: 0
+
+  .process-organization .process-icon
+    background-position: -4.4em -5em
+
+  .process-education .process-icon
+    background-position: -9.4em -5em
+
+  .process-efficiency .process-icon
+    background-position: -14.4em -5em
+
+  .process-creativity .process-icon
+    background-position: -19.4em -5em
+
+  .process-accuracy .process-icon
+    background-position: -24.4em -5em
