--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/elements/_all.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/stylesheets/elements/_all.sass
@@ -50,6 +50,10 @@
   display: table
   clear: both
 
+.baseline-grid
+  background-image: linear-gradient(#0ff 1px, transparent 1px)
+  background-size: auto 1.5em
+
 // ------------------------------------------------------------
 // ------------------------------------------------------------Typography
 html
@@ -57,8 +61,6 @@ html
   font-size: 125%
   line-height: 1.5em
   font-weight: normal
-  // background-image: linear-gradient(#0ff 1px, transparent 1px)
-  // background-size: auto 1.5em
 
 body
   color: $brand-dark-neutral
@@ -152,16 +154,6 @@ a
   background: url('../images/ui/sprites.png') left top
   background-size: 60em
   background-position: 0 0.75em
-
-// ------------------------------------------------------------
-// ------------------------------------------------------------Iconography
-.process-icon
-  display: block
-  height: 3em
-  width: 4em
-  background-image: url('../images/ui/sprites.png')
-  background-size: 60em
-  background-position: 0.6em -5em
 
 // ------------------------------------------------------------
 // ------------------------------------------------------------Imagery
