updated Responsive Em Grid System

--- a/instructor-examples/Module 3 - Responsive Web Design/Responsive Em Grid System/assets/stylesheets/style.sass
+++ b/instructor-examples/Module 3 - Responsive Web Design/Responsive Em Grid System/assets/stylesheets/style.sass
@@ -1,24 +1,9 @@
-*
-  box-sizing: border-box
+html
+  // background: none !important
 
-.container
-  margin: 1em
-
-
+@import helpers
 @import baseline-grid
-
-.viewport-label
-  margin: 0
-
-  &::before
-    position: absolute
-    bottom: 0
-    right: 0
-    padding: 0 5px
-    color: white
-    font-size: 0.75em
-    background: rgba(0,0,0,0.5)
-
+@import base
 
 // 16px = 1em
 // 480px = 30em
